<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:orientation="vertical">

        <EditText

            style="@style/Employee_id_card_form"
            android:hint="@string/name" />

        <EditText
            style="@style/Employee_id_card_form"
            android:hint="@string/id" />

        <EditText
            style="@style/Employee_id_card_form"
            android:hint="@string/DOB" />

        <EditText
            style="@style/Employee_id_card_form"
            android:hint="@string/blood_group" />

        <EditText
            style="@style/Employee_id_card_form"
            android:hint="@string/phone_number" />

        <EditText
            style="@style/Employee_id_card_form"
            android:hint="@string/stateName" />

        <EditText
            style="@style/Employee_id_card_form"
            android:hint="@string/districtName" />

        <EditText
            style="@style/Employee_id_card_form"
            android:hint="@string/address" />
    </LinearLayout>

</ScrollView>

